.k8s/ingestor-stocks-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --out .k8s/
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: ingestor-stocks
  name: ingestor-stocks
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ingestor-stocks
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --out .k8s/
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/k8s-poc-default: "true"
        io.kompose.service: ingestor-stocks
    spec:
      containers:
        - args:
            - /bin/bash
            - -c
            - |
              python ingestor.py -t stock
          image: kingak/ingestor-k8s-poc
          imagePullPolicy: Never
          name: ingestor-stocks
          resources: {}
      restartPolicy: Always
status: {}
